tests/suite/fail/generated/parser/fail_undefined_1.ny
fn main() {
    let x = y1 //~ ERROR undefined variable
}
